--- a/apps/TizenTube/index.html
+++ b/apps/TizenTube/index.html
@@ -5,6 +5,8 @@
 	<a style="color: white;" id="text">Why did this happen...?</a>
 	<script>
 		window.location.href = "https://www.youtube.com/tv";
+		
+		tizen.tvinputdevice.registerKey('ColorF1Green');		
 	</script>
 </body>
 </html>
