Enable Play/Pause-button

--- a/apps/TizenTube/index.html
+++ b/apps/TizenTube/index.html
@@ -6,7 +6,8 @@
 	<script>
 		window.location.href = "https://www.youtube.com/tv";
 		
-		tizen.tvinputdevice.registerKey('ColorF1Green');		
+		tizen.tvinputdevice.registerKey('ColorF1Green');
+		tizen.tvinputdevice.registerKey('MediaPlayPause');
 	</script>
 </body>
 </html>
