feat: video speed controls
These changes also includes @wikai's changes from https://github.com/reisxd/TizenTube/pull/22.

This also fixes issue #15.

Co-Authored-By: wikai <80284758+wikai@users.noreply.github.com>

--- a/apps/TizenTube/index.html
+++ b/apps/TizenTube/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
+
 <head>
 </head>
+
 <body>
 	<a style="color: white;" id="text">Why did this happen...?</a>
 	<script>
+		tizen.tvinputdevice.registerKey('ColorF1Green');
+		tizen.tvinputdevice.registerKey('ColorF3Blue');
+		tizen.tvinputdevice.registerKey('ColorF0Red');
+		tizen.tvinputdevice.registerKey('ColorF2Yellow');
+		tizen.tvinputdevice.registerKey('MediaPlayPause');
 		window.location.href = "https://www.youtube.com/tv";
 	</script>
 </body>
+
 </html>
